Fix(-): Wrap scss

--- a/src/shared/components/eventSection/EventSection.module.scss
+++ b/src/shared/components/eventSection/EventSection.module.scss
@@ -6,9 +6,14 @@
     border: 0.5px solid $LightGrey;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.12);
     margin-top: 1em;
+    width: 100%;
+    max-width: 900px;
+
+
     @media screen and (min-width: $desktop) {
         border: none;
         margin: 50px;
+
     }
 }
 
@@ -30,7 +35,7 @@
 }
 
 .wrapperMarkets {
-    display: flex;
+    display: block;
     justify-content: space-evenly;
     @media screen and (min-width: $desktop) {
         display: flex;  
